smtp authentication no longer requires you to enter a password every time.

applying folder filters to a set of messages now shows a status dialog.

unsuccessful open attachment commands now show an error.

right-clicking on the Attachment icon now brings up a menu to open, save
(shift-rightclick), or open with (control-rightclick) the attachment.

optimized loading/displaying of new messages in disconnected imap mode.

fixed opening attachments from preview panel.

added a fastDelete option (enabled by default) which auto-selects the next
message when a delete is requested, instead of waiting for the delete to
complete.

040327 release
--------------

added a configurable spam button.

added a button for using custom headers on an outgoing mail message.

updated printing to use the new jdk 1.4 printing system.  also made 
printing, err, work correctly now.

fixed notifyNewMessagesMain and Node so that they actually work.

running with maildir support (including POP3 with a maildir backend), you
no longer get excess ...subFolder directories on WinXP.

made a way to reconnect to a folder after it's been disconnected, other than
closing and reopening the entire store.

fixed a bug where deleted messages weren't being removed from the folder table
after reconnecting under disconnected imap.

fixed a bug in which, when switching from desktop mode to preview mode
with autopreview off, you could end up opening a new window with the enter 
key instead of just showing the message in the preview pane.

fixed a minor bug in which clearing a preview-pane mode message with a 
custom theme would result in the message flashing for a moment with a 
default font.

fixed a bug where, in preview pane mode, messages with attachments wouldn't
get their themes set correctly.

made it so selecting or scrolling in a messagepanel will remove the
new message icon.

fixed a bug in configuration where a new user without an explicit SMTP